# AmethystXRenderEngineModule

./: CMakeLists.txt  README.md
scripts/: build-windows-mingw.sh  build.sh
src/: RenderThread.cpp  RenderThread.h  module.cpp
